--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -5,12 +5,34 @@ body {
     background-attachment: fixed;
 }
 
+#eagle-right {
+    float: right;
+}
+
 #logo{
     height: 200px;
     width: 200px;
 }
 .menupunkter{
-    background-color: lightcoral;
-    width: 100%
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-size: 20px;
+    background-color: whitesmoke;
+    width: 50%
 }
+
+th, td {
+    border: 1px solid black;
+  }
+
+#table-div  {
+    width: 100%;
+
+}
+
+/* tr {
+    color: blue;
+    font-size: 20px;
+    font-family: Garamond, serif;
+    /*font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+}*/
 
