google pin added

--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -95,6 +95,10 @@ td {
     margin-left: 25%;
     width:100%
 }
+.googlePin{
+    width: 50%;
+    margin-left: 25%;
+}
 
 /* tr {
     color: blue;
