Table data font-size fixed

--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -87,6 +87,11 @@ body {
     border-radius: 2vh;    
 }
 
+.menupunkter td,th{
+    
+    font-size: 22px;
+}
+
 th,
 td {
     border: none;/*1px solid black;*/
