--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -31,7 +31,7 @@ body {
 
 }
 
-.pris{
+.pris {
     text-align: center;
 }
 
@@ -43,7 +43,7 @@ body {
     color: rgb(0, 0, 0);
 }
 
-.topbar-item td{
+.topbar-item td {
     border: none;
 }
 
@@ -82,38 +82,186 @@ body {
     font-family: Copperplate, "Copperplate Gothic Light", fantasy;
     font-size: 20px;
     background-color: whitesmoke;
-    width: 65%;   
-    margin-left :17.5%;
-    border-radius: 2vh;    
+    width: 65%;
+    margin-left: 17.5%;
+    border-radius: 2vh;
 }
 
-.menupunkter td,th{
-    
+.menupunkter td,
+th {
+
     font-size: 22px;
 }
 
 th,
 td {
-    border: none;/*1px solid black;*/
+    border: none;
+    /*1px solid black;*/
     padding: 20px;
 }
 
-.table-div table{
+.table-div table {
     width: 100%
 }
-.mySlides{
+
+.mySlides {
     margin-left: 25%;
-    width:100%
-}
-.googlePin{
-    width: 50%;
-    margin-left: 25%;
-    
+    width: 100%
 }
 
-#smileydata{
-    float:right;
+.googlePin {
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-size: 22px;
+    width: 100%;
+    margin-left: 3%;
+    padding: 20px;
+
 }
+
+
+/* Dropdown Button */
+.dropbtn {
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-size: 20px;
+    background-color: whitesmoke;
+    text-decoration: underline;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+}
+
+/* Dropdown button on hover & focus */
+.dropbtn:hover,
+.dropbtn:focus {
+    background-color: #8c8c8c;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: whitesmoke;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.show {
+    display: block;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+* {
+    box-sizing: border-box;
+  }
+  
+  /* Position the image container (needed to position the left and right arrows) */
+  .container {
+    position: relative;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Add a pointer when hovering over the thumbnail images */
+  .cursor {
+    cursor: pointer;
+  }
+  
+  /* Next & previous buttons */
+  .prev,
+  .next {
+    cursor: pointer;
+    position: absolute;
+    top: 40%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover,
+  .next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* Container for image text */
+  .caption-container {
+    text-align: center;
+    background-color: #222;
+    padding: 2px 16px;
+    color: white;
+  }
+  
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  /* Six columns side by side */
+  .column {
+    float: left;
+    width: 16.66%;
+  }
+  
+  /* Add a transparency effect for thumnbail images */
+  .demo {
+    opacity: 0.6;
+  }
+  
+  .active,
+  .demo:hover {
+    opacity: 1;
+  }
 
 /* tr {
     color: blue;
