--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -9,6 +9,10 @@ body {
     font-size: 60px;
     margin-top: 2px;
     margin-bottom: 5px;
+}
+
+#welcomeLogo {
+    height: 300px;
 
 }
 
@@ -30,6 +34,20 @@ body {
     padding-top: 2px;
 
 }
+
+.topheader2 {
+    font-family: Copperplate, "Copperplate Gothic Light", fantasy;
+    font-size: 20px;
+    background-color: whitesmoke;
+    border: 2px solid black;
+    border-radius: 15px;
+    padding-top: 2px;
+    margin-top: 2%;
+    margin-left: 20%;
+    margin-right: 20%;
+
+}
+
 
 .pris {
     text-align: center;
@@ -60,7 +78,7 @@ body {
     height: 220px;
     width: 200px;
     float: right;
-    margin-right: 25px;
+    margin: 25px;
     z-index: -1;
 }
 
