--- a/stylesheet1.css
+++ b/stylesheet1.css
@@ -74,12 +74,34 @@ body {
     z-index: -1;
 }
 
+#logo1w {
+    height: 300px;
+    float: left;
+    margin-left: 30px;
+    margin-top: 30px;
+    z-index: -1;
+}
+
+
+
+
 #logo2 {
     height: 220px;
     width: 200px;
     float: right;
     margin: 25px;
     z-index: -1;
+}
+
+#logo2W {
+    margin-left: 20px;
+    margin-top: 25px;
+    margin-right: 30px;
+    height: 300px; 
+    width: 250px;
+    float: left;
+    z-index: -1;
+    
 }
 
 #logo1div {
